# Fiken.py

./: README.md  TODO.txt  pyproject.toml  requirements.txt
debugging/: .env  TestAPIElements.py  oauth_example.py
fiken_py/: authorization.py  errors.py  fiken_object.py  fiken_types.py  shared_enums.py  shared_types.py  util.py  vat_validation.py
fiken_py/models/: README.md  __init__.py  account.py  balance_account.py  bank_account.py  company.py  contact.py  contact_person.py  credit_note.py  draft.py  fiken_py.py  inbox_document.py  invoice.py  journal_entry.py  offer.py  order_confirmation.py  payment.py  product.py  product_sales_report.py  project.py  purcase.py  purchase.py  sale.py  transaction.py  user_info.py
test/: conftest.py  sample_data_reader.py  test_exceptions.py  test_fiken_object.py  test_models.py  test_placeholder_handling.py  test_type_validation.py  test_vat_validation.py
test/sample_model_responses/: README.md  account.json  account_balance.json  attachment.json  bank_account.json  company.json  contact.json  contact_person.json  credit_note.json  (+18 more)
test_online/: .env  conftest.py  sample_object_factory.py  shared_tests.py  test_balance_accounts.py  test_bankaccounts.py  test_companies.py  test_contact.py  test_contact_and_contactperson.py  test_credit_note.py  test_draft.py  test_inbox_documents.py  test_invoice.py  test_journal_entry.py  test_journal_entry_and_transaction.py  test_offer.py  test_oop.py  test_order_confirmation.py  test_product.py  test_product_sale_report.py  test_projects.py  test_purchase.py  test_sale.py  test_user.py
